--- a/src/content/chronology-years/2023.yml
+++ b/src/content/chronology-years/2023.yml
@@ -1,5 +1,5 @@
-cms_button_label: 2018 Kronoloji2
-year: 2029
+cms_button_label: 2018 Kronoloji
+year: 2018
 is_active: true
 fairs:
   - description_tr: MIMARI AYDINLATMA, KONUT ve DEKORATIF AYDINLATMA
