fix: reCAPTCHA kaldırıldı - honeypot spam koruması eklendi

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
 [build.environment]
   NODE_VERSION = "18"
 
-# Form notifications
+# Form notifications - Honeypot spam protection
 [[forms]]
   name = "visitor-form"
   
