--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -81,7 +81,7 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      name_tr: PARIS BRIDAL FAIR
+      name_tr: PARIS BRIDAL FAIR---
       name_en: PARIS BRIDAL FAIR
       start_date: 2026-03-08
       end_date: 2026-03-09
