--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -59,7 +59,7 @@ fairs:
       name_tr: 18. HOMEDECO KAZAKİSTAN
       location_en: ALMATY, KAZAKHSTAN
       date_en: 16 - 18 FEBRUARY 2026
-      name_en: 18. HOMEDECO KAZAKHSTAN
+      name_en: 18. HOMEDECO KAZAKHSTAN333333
     visuals:
       logo: /images/fuarlar-logo.png
       background_image: /images/fuarlar-arkaplan.jpg
