--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -59,7 +59,7 @@ fairs:
       name_tr: 18. HOMEDECO KAZAKİSTAN
       location_en: ALMATY, KAZAKHSTAN
       date_en: 16 - 18 FEBRUARY 2026
-      name_en: 18. HOMEDECO KAZAKHSTAN
+      name_en: 18TH HOMEDECO KAZAKHSTAN
     visuals:
       logo: /images/fuarlar-logo.png
       background_image: /images/fuarlar-arkaplan.jpg
@@ -81,16 +81,18 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      name_tr: PARIS BRIDAL FAIR---
-      name_en: PARIS BRIDAL FAIR
-      start_date: 2026-03-08
-      end_date: 2026-03-09
-      location_tr: PARİS, FRANSA
-      location_en: PARIS, FRANCE
+      description_tr: ULUSLARARASI GELİNLİK FUARI
       sector: Moda ve Tekstil
+      location_tr: PARİS, FRANSA
+      start_date: 2026-03-08
+      description_en: INTERNATIONAL BRIDAL SHOW
+      end_date: 2026-03-09
+      name_tr: PARIS BRIDAL FAIR
+      location_en: PARIS, FRANCE
+      name_en: PARIS BRIDAL FAIR
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/logo-parisbridal.jpg
+      background_image: /images/image_1_48.webp
   - settings:
       show_in_slider: false
       show_in_forms: true
@@ -100,7 +102,7 @@ fairs:
       sector: Moda ve Tekstil
       location_tr: MOSKOVA, RUSYA
       start_date: 2026-03-27
-      description_en: WEDDING DRESS, EVENING DRESS, GROOM'S SUIT AND WEDDING DRESS FABRIC FAIR
+      description_en: INTERNATIONAL TRADE SHOW BRIDALWEAR, EVENINGWEAR, ACCESSORIES
       date_tr: 27 - 28 MART 2026
       end_date: 2026-03-28
       name_tr: 43. WEDDING FASHION MOSCOW
@@ -136,7 +138,7 @@ fairs:
       date_en: 20 - 22 MARCH 2026
       name_en: BEAUTY DUSSELDORF
     visuals:
-      logo: /images/fair-logo-beauty.png
+      logo: /images/ekran-resmi-2025-09-03-21.23.28.png
       background_image: /images/fair-bg-beauty.png
     representative:
       name: Seval ARSLAN
@@ -164,7 +166,7 @@ fairs:
       date_en: 21 - 22 MARCH 2026
       name_en: TOP HAIR
     visuals:
-      logo: /images/fair-logo-tophair.png
+      logo: /images/th_messe_logo_2026-rgb-20mm.png
       background_image: /images/fair-bg-tophair.jpg
     representative:
       name: Seval ARSLAN
@@ -181,7 +183,7 @@ fairs:
       order: 7
     basic_info:
       description_tr: ULUSLARARASI ELEKTRİK, ENERJİ VE AYDINLATMA FUARI
-      sector: Enerji
+      sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
       location_tr: DUBAİ, BAE
       start_date: 2026-04-07
       description_en: INTERNATIONAL ELECTRICITY, ENERGY AND LIGHTING FAIR
@@ -209,7 +211,7 @@ fairs:
       order: 8
     basic_info:
       description_tr: ULUSLARARASI BORU VE TEL FUARI
-      sector: İnşaat
+      sector: Kalıp & Plastik, İhtisas, Havuz
       location_tr: DÜSSELDORF, ALMANYA
       start_date: 2026-04-15
       description_en: INTERNATIONAL PIPE AND WIRE FAIR
@@ -237,7 +239,7 @@ fairs:
       order: 9
     basic_info:
       description_tr: ULUSLARARASI GÜVENLİK VE YANGIN KORUMA FUARI
-      sector: İnşaat
+      sector: Deri Fuarları & Güvenlik Sistemleri Fuarları
       location_tr: MOSKOVA, RUSYA
       start_date: 2026-04-22
       description_en: INTERNATIONAL SECURITY AND FIRE PROTECTION FAIR
@@ -257,7 +259,7 @@ fairs:
       phone: ""
       title_tr: Satış Temsilcisi
       title_en: Sales Representative
-      team_member: Neşe Şenyurt
+      team_member: Gül Baykara
       hide_phone: true
   - representative:
       hide_phone: true
@@ -268,18 +270,18 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      description_tr: ULUSLARASI DERİ VE MODA FUARI
-      sector: Moda ve Tekstil
+      description_tr: ULUSLARASI KIŞ MODA FUARI
+      sector: Deri Fuarları & Güvenlik Sistemleri Fuarları
       location_tr: MOSKOVA, RUSYA
-      start_date: 1990-01-01
-      description_en: INT'L WINTER FASHION TRADE SHOW
-      end_date: 1990-01-03
-      name_tr: 29.LESHOW
+      start_date: 2026-06-23
+      description_en: INTERNATIONAL WINTER FASHION TRADE SHOW
+      end_date: 2026-06-25
+      name_tr: 29.LESHOW MOSKOVA
       location_en: MOSCOW, RUSSIA
-      name_en: 29.LESHOW
+      name_en: 29TH LESHOW MOSCOW
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/leshow-logo-fair.png
+      background_image: /images/leshow-gorsel-fair.jpg
   - settings:
       show_in_slider: false
       show_in_forms: true
@@ -314,7 +316,7 @@ fairs:
       order: 12
     basic_info:
       description_tr: ULUSLARARASI ELEKTRİK, ENERJİ AYDINLATMA VE BİNA OTOMASYON FUARI
-      sector: Enerji
+      sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
       location_tr: MOSKOVA, RUSYA
       start_date: 2026-06-08
       description_en: INTERNATIONAL ELECTRICITY, ENERGY LIGHTING AND BUILDING AUTOMATION FAIR
@@ -373,18 +375,18 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      description_tr: "ULUSLARARASI ÇOCUK FUARI "
+      description_tr: ULUSLARARASI BEBEK GİYİM VE ARAÇ GEREÇLERİ FUARI
       sector: Moda ve Tekstil
       location_tr: KÖLN, ALMANYA
       start_date: 1901-01-01
-      description_en: THE TRADE SHOW FOR KIDS’ FIRST YEARS
+      description_en: INTERNATIONAL TRADE FAIR FOR BABY AND TODDLER OUTFITTING
       end_date: 1901-01-03
       name_tr: KIND+JUGEND
       location_en: COLOGNE, GERMANY
       name_en: KIND+JUGEND
     visuals:
-      logo: /images/fair-bg-beauty.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/kind-logo-fair.png
+      background_image: /images/ekran-resmi-2025-09-03-21.37.51.png
   - representative:
       hide_phone: true
       team_member: Seval Arslan
@@ -394,16 +396,18 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      name_tr: BRIDAL WEEK HARROGATE
-      name_en: BRIDAL WEEK HARROGATE
-      start_date: 1901-01-01
-      end_date: 1901-01-03
-      location_tr: HARROGATE, İNGİLTERE
-      location_en: HARROGATE, ENGLAND
+      description_tr: ULUSLARARASI GELİNLİK FUARI
       sector: Moda ve Tekstil
+      location_tr: HARROGATE, İNGİLTERE
+      start_date: 1901-01-01
+      description_en: INTERNATIONAL BRIDAL FAIR
+      end_date: 1901-01-03
+      name_tr: HARROGE BRIDAL – WHITE GALLERY
+      location_en: HARROGATE, UK
+      name_en: HARROGE BRIDAL – WHITE GALLERY
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/logo-bridal.png
+      background_image: /images/2019-gelinlik-trendleri-neler-1.jpg
   - representative:
       hide_phone: true
       team_member: Seval Arslan
@@ -413,16 +417,18 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      name_tr: KIDS TOYS & STATIONARY PAPER & GIFT HOMEWARE
-      name_en: KIDS TOYS & STATIONARY PAPER & GIFT HOMEWARE
-      start_date: 1901-01-01
-      end_date: 1901-01-01
-      location_tr: RİYAD, SUUDİ ARABİSTAN
-      location_en: RIYADH, SAUDI ARABIA
+      description_tr: BEBEK & ÇOCUK GİYİM VE ARAÇ GEREÇLERİ FUARI
       sector: Diğer
+      location_tr: RİYAD, SUUDİ ARABİSTAN
+      start_date: 1901-01-01
+      description_en: BABY & CHILDREN'S CLOTHING AND EQUIPMENT FAIR
+      end_date: 1901-01-01
+      name_tr: KIDS TOYS & STATIONARY PAPER & GIFT HOMEWARE
+      location_en: RIYADH, SAUDI ARABIA
+      name_en: KIDS TOYS & STATIONARY PAPER & GIFT HOMEWARE
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/logo-kidstoys.png
+      background_image: /images/gorsel-kidstoys.jpg
   - representative:
       hide_phone: true
       team_member: Pınar Yalçın
@@ -432,35 +438,40 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      name_tr: INTERLIGHT CENTRAL ASYA
-      name_en: INTERLIGHT CENTRAL ASIA
-      start_date: 1901-01-01
-      end_date: 1901-01-01
-      location_tr: ASTANA, KAZAKİSTAN
-      location_en: ASTANA, KAZAKHSTAN
+      description_tr: ULUSLARARASI AYDINLATMA, ELEKTRİK MÜHENDİSLİĞİ VE GÜVENLİK
+        SİSTEMLERİ FUARI
       sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
+      location_tr: ASTANA, KAZAKİSTAN
+      start_date: 1901-01-01
+      description_en: NTERNATIONAL LIGHTING, ELECTRICAL ENGINEERING AND SECURITY SYSTEMS FAIR
+      end_date: 1901-01-01
+      name_tr: INTERLIGHT CENTRAL ASIA
+      location_en: ASTANA, KAZAKHSTAN
+      name_en: INTERLIGHT CENTRAL ASIA
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/logo-interlight.png
+      background_image: /images/gorsel-interlight.jpg
   - representative:
       hide_phone: true
-      team_member: Pınar Yalçın
+      team_member: Seval Arslan
     settings:
       order: 18
       show_in_slider: false
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      name_tr: SAUDI LIFESTYLE WEEK FASHION SPORTS WEAR DESIGN
-      name_en: SAUDI LIFESTYLE WEEK FASHION SPORTS WEAR DESIGN
-      start_date: 1901-01-01
-      end_date: 1901-01-01
-      location_tr: RİYAD, SUUDİ ARABİSTAN
-      location_en: RIYADH, SAUDI ARABIA
+      description_tr: ULUSLARARASI MODA FUARI
       sector: Moda ve Tekstil
+      location_tr: RİYAD, SUUDİ ARABİSTAN
+      start_date: 1901-01-01
+      description_en: INTERNATIONAL FASHION FAIR
+      end_date: 1901-01-01
+      name_tr: SAUDI LIFESTYLE WEEK FASHION SPORTS WEAR DESIGN
+      location_en: RIYADH, SAUDI ARABIA
+      name_en: SAUDI LIFESTYLE WEEK FASHION SPORTS WEAR DESIGN
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/logo-saudi.jpg
+      background_image: /images/gorsel-saudi.jpg
   - representative:
       hide_phone: true
       team_member: Arzu Günal
@@ -470,16 +481,20 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      name_tr: HOMETEXTILE & DESIGN 2025
-      name_en: HOMETEXTILE & DESIGN 2025
-      start_date: 1901-01-01
-      end_date: 1901-01-01
-      location_tr: MOSKOVA, RUSYA
-      location_en: MOSCOW, RUSSIA
+      description_tr: ULUSLARARASI İÇ MEKAN KUMAŞLARI, EV TEKSTİLİ VE DEKORASYON
+        MALZEMELERİ FUARI
       sector: Ev Tekstili ve Dekorasyon
+      location_tr: MOSKOVA, RUSYA
+      start_date: 1901-01-01
+      description_en: INTERNATIONAL TRADE FAIR OF INTERIOR FABRICS, HOME TEXTILES AND
+        INTERIOR DESIGN SOLUTIONS
+      end_date: 1901-01-01
+      name_tr: HOMETEXTILE & DESIGN 2026
+      location_en: MOSCOW, RUSSIA
+      name_en: HOMETEXTILE & DESIGN 2026
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/logo-hometextile.png
+      background_image: /images/gorsel-hometextile.jpg
   - representative:
       hide_phone: true
       team_member: Pınar Yalçın
@@ -489,16 +504,18 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      name_tr: INTERLIGHT SMART CITY & HOME
-      name_en: INTERLIGHT SMART CITY & HOME
-      start_date: 1901-01-01
-      end_date: 1901-01-01
-      location_tr: MOSKOVA, RUSYA
-      location_en: MOSCOW, RUSSIA
+      description_tr: ULUSLARARASI AYDINLATMA VE AKILLI BİNA TEKNOLOJİLERİ FUARI
       sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
+      location_tr: MOSKOVA, RUSYA
+      start_date: 1901-01-01
+      description_en: INTERNATIONAL TRADE FAIR FOR LIGHTING AND BUILDING SERVICES TECHNOLOGY
+      end_date: 1901-01-01
+      name_tr: INTERLIGHT SMART CITY & HOME
+      location_en: MOSCOW, RUSSIA
+      name_en: INTERLIGHT SMART CITY & HOME
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/logo-ınterlıght.png
+      background_image: /images/gorsel-interlightsmart.jpg
   - representative:
       hide_phone: true
       team_member: Ahmet Hilmi Çoruk
@@ -508,18 +525,18 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      description_tr: Pool, Wellness and Outdoor Fuarı
+      description_tr: ULUSLARARASI HAVUZ, SAĞLIK VE AÇIK HAVA FUARI
       sector: Kalıp & Plastik, İhtisas, Havuz
       location_tr: BARSELONA, İSPANYA
       start_date: 1901-01-01
-      description_en: Pool, Wellness and Outdoor Fuarı
+      description_en: INTERNATIONAL POOL, HEALTH AND OUTDOOR FAIR
       end_date: 1901-01-01
       name_tr: PISCINA BARCELONA
       location_en: BARCELONA, SPAIN
       name_en: PISCINA BARCELONA
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/logo-piscina.png
+      background_image: /images/gorsel-piscina.jpg
   - representative:
       hide_phone: false
       team_member: Pınar Yalçın
@@ -529,18 +546,18 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      description_tr: Uluslararası Mobilya, Bağlantı Elemanları ve Yan Sanayi Fuarı.
+      description_tr: ULUSLARARASI MOBİLYA, BAĞLANTI ELEMANLARI VE YAN SANAYİ FUARI
       sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
       location_tr: MOSKOVA, RUSYA
       start_date: 1901-01-01
-      description_en: Uluslararası Mobilya, Bağlantı Elemanları ve Yan Sanayi Fuarı.
+      description_en: INTERNATIONAL EXHIBITION FOR FURNITURE, FITTINGS AND UPHOLSTERY
       end_date: 1901-01-01
       name_tr: 36.MEBEL
       location_en: MOSCOW, RUSSIA
-      name_en: 36.MEBEL
+      name_en: 36TH MEBEL
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/logo-mebel.png
+      background_image: /images/gorsel-mebel.png
   - representative:
       hide_phone: true
       team_member: Pınar Yalçın
@@ -550,13 +567,17 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      name_tr: WOODEX 2025
-      name_en: WOODEX 2025
-      start_date: 1901-01-01
-      end_date: 1901-01-01
-      location_tr: MOSKOVA, RUSYA
-      location_en: MOSCOW, RUSSIA
+      description_tr: ULUSLARARASI AĞAÇ İŞLEME VE MOBİLYA ENDÜSTRİSİ İÇİN EKİPMAN,
+        MALZEME VE BİLEŞENLERİ FUARI
       sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
+      location_tr: MOSKOVA, RUSYA
+      start_date: 1901-01-01
+      description_en: ANNUAL INTERNATIONAL EXHIBITION OF EQUIPMENT, MATERIALS AND
+        COMPONENTS FOR THE WOODWORKING AND FURNITURE INDUSTRY
+      end_date: 1901-01-01
+      name_tr: WOODEX 2026
+      location_en: MOSCOW, RUSSIA
+      name_en: WOODEX 2026
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/logo-woodex.png
+      background_image: /images/gorsel-woodex.png
