--- a/src/content/fair-years/2025.yml
+++ b/src/content/fair-years/2025.yml
@@ -34,8 +34,8 @@ fairs:
       location_en: DUSSELDORF, GERMANY
       name_en: BOOT DUSSELDORF
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/logo-boot.png
+      background_image: /images/gorsel-boot.avif
   - representative:
       hide_phone: true
       team_member: Arzu Günal
@@ -45,18 +45,18 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      description_tr: ULUSLARARASI EV TEKSTİLİ, ve DEKORASYON FUARI
-      sector: Moda ve Tekstil
+      description_tr: ULUSLARARASI EV TEKSTİLİ VE DEKORASYON FUARI
+      sector: Ev Tekstili ve Dekorasyon
       location_tr: ALMATI, KAZAKİSTAN
       start_date: 2025-02-24
       description_en: INTERNATIONAL HOME TEXTILES AND DECORATION FAIR
       end_date: 2025-02-27
-      name_tr: 17.HOMEDECO, KAZAKİSTAN
+      name_tr: 17.HOMEDECO KAZAKİSTAN
       location_en: ALMATY, KAZAKHSTAN
-      name_en: 17.HOMEDECO, KAZAKHSTAN
+      name_en: 17TH HOMEDECO KAZAKHSTAN
     visuals:
       logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      background_image: /images/gorsel.jpg
   - representative:
       hide_phone: true
       team_member: Seval Arslan
@@ -66,18 +66,18 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      description_tr: ULUSLARARASI GELİNLİK VE ABİYE GİYİM FUARI
+      description_tr: GELİNLİK, ABİYE, DAMATLIK VE GELİNLİK KUMAŞI FUARI
       sector: Moda ve Tekstil
       location_tr: MOSKOVA, RUSYA
       start_date: 2025-02-27
-      description_en: INTERNATIONAL WEDDING DRESS AND EVENING DRESS FAIR
+      description_en: INTERNATIONAL TRADE SHOW BRIDALWEAR, EVENINGWEAR, ACCESSORIES
       end_date: 2025-03-01
       name_tr: 43.WEDDING FASHION MOSCOW
       location_en: MOSCOW, RUSSIA
-      name_en: 43.WEDDING FASHION MOSCOW
+      name_en: 43TH WEDDING FASHION MOSCOW
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/logo.png
+      background_image: /images/image_1_48.webp
   - representative:
       hide_phone: true
       team_member: Seval Arslan
@@ -87,16 +87,18 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      name_tr: PARIS BRIDAL FAIR
-      name_en: PARIS BRIDAL FAIR
-      start_date: 2025-03-09
-      end_date: 2025-03-10
-      location_tr: PARİS, FRANSA
-      location_en: PARIS, FRANCE
+      description_tr: ULUSLARARASI GELİNLİK FUARI
       sector: Moda ve Tekstil
+      location_tr: PARİS, FRANSA
+      start_date: 2025-03-09
+      description_en: INTERNATIONAL BRIDAL SHOW
+      end_date: 2025-03-10
+      name_tr: PARIS BRIDAL FAIR
+      location_en: PARIS, FRANCE
+      name_en: PARIS BRIDAL FAIR
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/logo-parisbridal.jpg
+      background_image: /images/2019-gelinlik-trendleri-neler-1.jpg
   - representative:
       hide_phone: true
       team_member: Pınar Yalçın
@@ -106,16 +108,19 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      name_tr: ELECTRO
-      name_en: ELECTRO
-      start_date: 2025-04-01
-      end_date: 2025-04-04
-      location_tr: MOSKOVA, RUSYA
-      location_en: MOSCOW, RUSSIA
+      description_tr: ULUSLARARASI ELEKTRİK, ENERJİ AYDINLATMA VE BİNA OTOMASYON FUARI
       sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
+      location_tr: MOSKOVA, RUSYA
+      start_date: 2025-04-01
+      description_en: INTERNATIONAL EXHIBITION FOR ELECTRICAL EQUIPMENT FOR POWER AND
+        ELECTRICAL ENGINEERING, AUTOMATION, LIGHTING ENGINEERING
+      end_date: 2025-04-04
+      name_tr: ELECTRO
+      location_en: MOSCOW, RUSSIA
+      name_en: ELECTRO
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/fair-logo-electro.png
+      background_image: /images/gorsel.jpg
   - representative:
       hide_phone: true
       team_member: Pınar Yalçın
@@ -125,16 +130,19 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      name_tr: MIDDLE EAST ENERGY
-      name_en: MIDDLE EAST ENERGY
-      start_date: 2025-04-07
-      end_date: 2025-04-09
+      description_tr: ULUSLARARASI ELEKTRİK, ENERJİ VE AYDINLATMA FUARI
+      sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
       location_tr: DUBAI, BAE
+      start_date: 2025-04-07
+      description_en: INTERNATIONAL SECTORAL TRADE EXHIBITION OF ENERGY INDUSTRY AND
+        LIGHTING PRODUCTS
+      end_date: 2025-04-09
+      name_tr: MIDDLE EAST ENERGY
       location_en: DUBAI, UAE
-      sector: Enerji
+      name_en: MIDDLE EAST ENERGY
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/fair-logo-mee.jpg
+      background_image: /images/fair-bg-mee.png
   - representative:
       hide_phone: true
       team_member: Gül Baykara
@@ -144,18 +152,18 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      description_tr: ULUSLARASI DERİ VE MODA FUARI
-      sector: Moda ve Tekstil
+      description_tr: ULUSLARASI KIŞ MODA FUARI
+      sector: Deri Fuarları & Güvenlik Sistemleri Fuarları
       location_tr: MOSKOVA, RUSYA
       start_date: 2025-04-28
-      description_en: INT'L WINTER FASHION TRADE SHOW
+      description_en: INTERNATIONAL WINTER FASHION TRADE SHOW
       end_date: 2025-04-30
-      name_tr: 28.LESHOW
+      name_tr: 28.LESHOW MOSKOVA
       location_en: MOSCOW, RUSSIA
-      name_en: 28.LESHOW
+      name_en: 28TH LESHOW MOSCOW
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/leshow-logo-fair.png
+      background_image: /images/0161.jpg
   - representative:
       hide_phone: true
       team_member: Pınar Yalçın
@@ -165,18 +173,18 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      description_tr: RUSYA HELAL EXPO 2025
+      description_tr: ULUSLARARASI TİCARET FUARI
       sector: Diğer
       location_tr: KAZAN, TATARİSTAN
       start_date: 2025-05-14
-      description_en: RUSSIA HALAL EXPO 2025
+      description_en: INTERNATIONAL ECONOMIC FORUM "RUSSIA - ISLAMIC WORLD KAZAN FORUM
       end_date: 2025-05-16
-      name_tr: KAZAN FORUM
+      name_tr: KAZAN FORUM & RUSYA HELAL EXPO
       location_en: KAZAN, TATARSTAN
-      name_en: KAZAN FORUM
+      name_en: KAZAN FORUM & RUSYA HELAL EXPO
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/fair-logo-kazan.jpg
+      background_image: /images/fair-bg-kazan.png
   - representative:
       hide_phone: true
       team_member: Ahmet Hilmi Çoruk
@@ -186,16 +194,18 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      name_tr: ROSMOULD / ROSPLAST
-      name_en: ROSMOULD / ROSPLAST
-      start_date: 2025-06-17
-      end_date: 2025-06-19
-      location_tr: MOSKOVA, RUSYA
-      location_en: MOSCOW, RUSSIA
+      description_tr: ULUSLARARASI KALIP VE PLASTİK FUARI
       sector: Kalıp & Plastik, İhtisas, Havuz
+      location_tr: MOSKOVA, RUSYA
+      start_date: 2025-06-17
+      description_en: ROSMOULD INTERNATIONAL MOLD FAIR / ROSPLAST INTERNATIONAL PLASTIC FAIR
+      end_date: 2025-06-19
+      name_tr: ROSMOULD / ROSPLAST
+      location_en: MOSCOW, RUSSIA
+      name_en: ROSMOULD / ROSPLAST
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/fair-logo-rosmould.png
+      background_image: /images/download.jpg
   - representative:
       hide_phone: true
       team_member: Seval Arslan
@@ -205,18 +215,18 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      description_tr: "ULUSLARARASI ÇOCUK FUARI "
+      description_tr: ULUSLARARASI BEBEK GİYİM VE ARAÇ GEREÇLERİ FUARI
       sector: Moda ve Tekstil
       location_tr: KÖLN, ALMANYA
       start_date: 2025-09-09
-      description_en: THE TRADE SHOW FOR KIDS’ FIRST YEARS
+      description_en: INTERNATIONAL TRADE FAIR FOR BABY AND TODDLER OUTFITTING
       end_date: 2025-09-11
       name_tr: KIND+JUGEND
       location_en: COLOGNE, GERMANY
       name_en: KIND+JUGEND
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/kind-logo-fair.png
+      background_image: /images/ekran-resmi-2025-09-03-22.48.44.png
   - representative:
       hide_phone: true
       team_member: Seval Arslan
@@ -226,16 +236,18 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      name_tr: BRIDAL WEEK HARROGATE
-      name_en: BRIDAL WEEK HARROGATE
-      start_date: 2025-09-14
-      end_date: 2025-09-16
-      location_tr: HARROGATE, İNGİLTERE
-      location_en: HARROGATE, ENGLAND
+      description_tr: ULUSLARARASI GELİNLİK FUARI
       sector: Moda ve Tekstil
+      location_tr: HARROGATE, İNGİLTERE
+      start_date: 2025-09-14
+      description_en: INTERNATIONAL BRIDAL FAIR
+      end_date: 2025-09-16
+      name_tr: HARROGATE BRIDAL – WHITE GALLERY
+      location_en: HARROGATE, ENGLAND
+      name_en: HARROGATE BRIDAL – WHITE GALLERY
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/logo-bridal.png
+      background_image: /images/2019-gelinlik-trendleri-neler-1.jpg
   - representative:
       hide_phone: true
       team_member: Seval Arslan
@@ -245,16 +257,18 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      name_tr: KIDS TOYS & STATIONARY PAPER & GIFT HOMEWARE EXPO
-      name_en: KIDS TOYS & STATIONARY PAPER & GIFT HOMEWARE EXPO
-      start_date: 2025-09-16
-      end_date: 2025-09-18
-      location_tr: RİYAD, SUUDİ ARABİSTAN
-      location_en: RIYADH, SAUDI ARABIA
+      description_tr: BEBEK & ÇOCUK GİYİM VE ARAÇ GEREÇLERİ FUARI
       sector: Moda ve Tekstil
+      location_tr: RİYAD, SUUDİ ARABİSTAN
+      start_date: 2025-09-16
+      description_en: BABY & CHILDREN'S CLOTHING AND EQUIPMENT FAIR
+      end_date: 2025-09-18
+      name_tr: KIDS & TOYS
+      location_en: RIYADH, SAUDI ARABIA
+      name_en: KIDS & TOYS
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/logo-kidstoys.png
+      background_image: /images/gorsel-kidstoys.jpg
   - representative:
       hide_phone: true
       team_member: Pınar Yalçın
@@ -264,58 +278,40 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      name_tr: INTERLIGHT CENTRAL ASIA
-      name_en: INTERLIGHT CENTRAL ASIA
-      start_date: 2025-09-17
-      end_date: 2025-09-19
-      location_tr: ASTANA, KAZAKİSTAN
-      location_en: ASTANA, KAZAKHSTAN
+      description_tr: ULUSLARARASI AYDINLATMA, ELEKTRİK MÜHENDİSLİĞİ VE GÜVENLİK
+        SİSTEMLERİ FUARI
       sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
+      location_tr: ASTANA, KAZAKİSTAN
+      start_date: 2025-09-17
+      description_en: INTERNATIONAL LIGHTING, ELECTRICAL ENGINEERING AND SECURITY SYSTEMS FAIR
+      end_date: 2025-09-19
+      name_tr: INTERLIGHT CENTRAL ASIA
+      location_en: ASTANA, KAZAKHSTAN
+      name_en: INTERLIGHT CENTRAL ASIA
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/logo-interlight.png
+      background_image: /images/gorsel-interlight.jpg
   - representative:
       hide_phone: true
-      team_member: Gül Baykara
-    settings:
-      order: 14
-      show_in_slider: false
-      show_in_forms: true
-      show_in_chronology: false
-    basic_info:
-      description_tr: ULUSLARARASI DIŞ CEPHE, KAPI ve PENCERE FUARI
-      sector: İnşaat
-      location_tr: CEZAYİR, CEZAYİR
-      start_date: 2025-09-20
-      description_en: INTERNATIONAL FACADE, DOOR AND WINDOWS FAIR
-      end_date: 2025-09-23
-      name_tr: "7. SIFFP "
-      location_en: ALGERIA, ALGERIA
-      name_en: 7. SIFFP
-    visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
-  - representative:
-      hide_phone: true
-      team_member: Gül Baykara
+      team_member: Seval Arslan
     settings:
       order: 15
       show_in_slider: false
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      description_tr: FASHION SPORTS WEAR DESIGN
+      description_tr: ULUSLARARASI MODA FUARI
       sector: Moda ve Tekstil
       location_tr: RİYAD, SUUDİ ARABİSTAN
       start_date: 2025-10-06
-      description_en: FASHION SPORTS WEAR DESIGN
+      description_en: INTERNATIONAL FASHION FAIR
       end_date: 2025-10-08
       name_tr: SAUDI LIFESTYLE WEEK
       location_en: RIYADH, SAUDI ARABIA
       name_en: SAUDI LIFESTYLE WEEK
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/logo-saudi.jpg
+      background_image: /images/gorsel-saudi.jpg
   - representative:
       hide_phone: true
       team_member: Arzu Günal
@@ -325,16 +321,20 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      name_tr: HOMETEXTILE & DESIGN 2025
-      name_en: HOMETEXTILE & DESIGN 2025
-      start_date: 2025-10-21
-      end_date: 2025-10-23
-      location_tr: MOSKOVA, RUSYA
-      location_en: MOSCOW, RUSSIA
+      description_tr: ULUSLARARASI İÇ MEKAN KUMAŞLARI, EV TEKSTİLİ VE DEKORASYON
+        MALZEMELERİ FUARI
       sector: Ev Tekstili ve Dekorasyon
+      location_tr: MOSKOVA, RUSYA
+      start_date: 2025-10-21
+      description_en: INTERNATIONAL TRADE FAIR OF INTERIOR FABRICS, HOME TEXTILES AND
+        INTERIOR DESIGN SOLUTIONS
+      end_date: 2025-10-23
+      name_tr: HOMETEXTILE & DESIGN
+      location_en: MOSCOW, RUSSIA
+      name_en: HOMETEXTILE & DESIGN
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/logo-hometextile.png
+      background_image: /images/gorsel-hometextile.jpg
   - representative:
       hide_phone: true
       team_member: Pınar Yalçın
@@ -344,16 +344,18 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      name_tr: INTERLIGHT SMART CITY & HOME
-      name_en: INTERLIGHT SMART CITY & HOME
-      start_date: 2025-10-21
-      end_date: 2025-10-24
-      location_tr: MOSKOVA, RUSYA
-      location_en: MOSCOW, RUSSIA
+      description_tr: ULUSLARARASI AYDINLATMA VE AKILLI BİNA TEKNOLOJİLERİ FUARI
       sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
+      location_tr: MOSKOVA, RUSYA
+      start_date: 2025-10-21
+      description_en: INTERNATIONAL TRADE FAIR FOR LIGHTING AND BUILDING SERVICES TECHNOLOGY
+      end_date: 2025-10-24
+      name_tr: INTERLIGHT SMART CITY & HOME
+      location_en: MOSCOW, RUSSIA
+      name_en: INTERLIGHT SMART CITY & HOME
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/logo-ınterlıght.png
+      background_image: /images/gorsel-interlightsmart.jpg
   - representative:
       hide_phone: true
       team_member: Ahmet Hilmi Çoruk
@@ -363,16 +365,18 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      name_tr: PISCINA BARCELONA
-      name_en: PISCINA BARCELONA
-      start_date: 2025-11-17
-      end_date: 2025-11-20
-      location_tr: BARSELONA, İSPANYA
-      location_en: BARCELONA, SPAIN
+      description_tr: ULUSLARARASI HAVUZ, SAĞLIK VE AÇIK HAVA FUARI
       sector: Kalıp & Plastik, İhtisas, Havuz
+      location_tr: BARSELONA, İSPANYA
+      start_date: 2025-11-17
+      description_en: INTERNATIONAL POOL, HEALTH AND OUTDOOR FAIR
+      end_date: 2025-11-20
+      name_tr: PISCINA BARCELONA
+      location_en: BARCELONA, SPAIN
+      name_en: PISCINA BARCELONA
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/logo-piscina.png
+      background_image: /images/gorsel-piscina.jpg
   - representative:
       hide_phone: true
       team_member: Pınar Yalçın
@@ -382,18 +386,18 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      description_tr: Uluslararası Mobilya, Bağlantı Elemanları ve Yan Sanayi Fuarı
+      description_tr: ULUSLARARASI MOBİLYA, BAĞLANTI ELEMANLARI VE YAN SANAYİ FUARI
       sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
       location_tr: MOSKOVA, RUSYA
       start_date: 2025-11-24
-      description_en: International Furniture, Fasteners and Sub-Industry Fair
+      description_en: INTERNATIONAL EXHIBITION FOR FURNITURE, FITTINGS AND UPHOLSTERY
       end_date: 2025-11-27
-      name_tr: "36.MEBEL "
+      name_tr: "MEBEL "
       location_en: MOSCOW, RUSSIA
-      name_en: "36.MEBEL "
+      name_en: "MEBEL "
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/logo-mebel.png
+      background_image: /images/gorsel-mebel.png
   - representative:
       hide_phone: true
       team_member: Pınar Yalçın
@@ -403,13 +407,17 @@ fairs:
       show_in_forms: true
       show_in_chronology: false
     basic_info:
-      name_tr: WOODEX 2025
-      name_en: WOODEX 2025
-      start_date: 2025-12-02
-      end_date: 2025-12-05
+      description_tr: ULUSLARARASI AĞAÇ İŞLEME VE MOBİLYA ENDÜSTRİSİ İÇİN EKİPMAN,
+        MALZEME VE BİLEŞENLERİ FUARI
+      sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
       location_tr: MOSKOVA, RUSYA
+      start_date: 2025-12-02
+      description_en: ANNUAL INTERNATIONAL EXHIBITION OF EQUIPMENT, MATERIALS AND
+        COMPONENTS FOR THE WOODWORKING AND FURNITURE INDUSTRY
+      end_date: 2025-12-05
+      name_tr: WOODEX
       location_en: MOSCOW, RUSSIA
-      sector: İnşaat
+      name_en: WOODEX
     visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
+      logo: /images/logo-woodex.png
+      background_image: /images/gorsel-woodex.png
